--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,8 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <!-- font awesome link  -->
     <script src="https://kit.fontawesome.com/0f2d963ed1.js" crossorigin="anonymous"></script>    
+    <!-- materialize icon link  -->
+    <script src="https://code.iconify.design/1/1.0.7/iconify.min.js"></script>
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
